Fixmedia link errors by adding .png

--- a/croatia.html
+++ b/croatia.html
@@ -92,6 +92,7 @@
 
     <section class="opponent">
       <div id="div1">
+        <p>Wembley Stadium</p><p>13 Jun</p>
         <img
           id="flag"
           src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
@@ -111,11 +112,11 @@
       </div>
       <div id="div2">
         <img
-          src="https://imgur.com/v14x1Kd"
+          src="https://imgur.com/v14x1Kd.jpeg"
           alt="England vs Croatia Starting Line Up"
         />
         <img
-          src="https://imgur.com/DzRO6vO"
+          src="https://imgur.com/DzRO6vO.jpeg"
           alt="England vs Croatia Stats"
         />
       </div>
