--- a/czech.html
+++ b/czech.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="https://imgur.com/AdpyZBs"
+          src="https://imgur.com/AdpyZBs.png"
           alt="England vs Czech-Republic Starting Line Up"
         />
         <img
-          src="https://imgur.com/xBs0Dmf"
+          src="https://imgur.com/xBs0Dmf.png"
           alt="England vs Czech-Republic Stats"
         />
       </div>
