--- a/denmark.html
+++ b/denmark.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="https://imgur.com/UfrUqfZ"
+          src="https://imgur.com/UfrUqfZ.png"
           alt="England vs Denmark Starting Line Up"
         />
         <img
-          src="https://imgur.com/om6rVYb"
+          src="https://imgur.com/om6rVYb.png"
           alt="England vs Denmark Stats"
         />
       </div>
