--- a/england.html
+++ b/england.html
@@ -96,7 +96,7 @@
     <section class="england">
       <div id="div1">
         <img
-          src="https://imgur.com/BKDQ62o"
+          src="https://imgur.com/BKDQ62o.jpeg"
           alt="England Team Collage"
         />
         <div class="wrapper">
