--- a/germany.html
+++ b/germany.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="https://imgur.com/elh7pZy"
+          src="https://imgur.com/elh7pZy.png"
           alt="England vs Germany Starting Line Up"
         />
         <img
-          src="https://imgur.com/vK3qP1d"
+          src="https://imgur.com/vK3qP1d.png"
           alt="England vs Germany Stats"
         />
       </div>
