--- a/italy.html
+++ b/italy.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="https://imgur.com/HzJiHo9"
+          src="https://imgur.com/HzJiHo9.png"
           alt="England vs Italy Starting Line Up"
         />
         <img
-          src="https://imgur.com/HzJiHo9"
+          src="https://imgur.com/GplQDXf.png"
           alt="England vs Italy Stats"
         />
       </div>
