--- a/scotland.html
+++ b/scotland.html
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="https://imgur.com/xXlJkcf"
+          src="https://imgur.com/xXlJkcf.png"
           alt="England vs Scotland Starting Line Up"
         />
         <img
-          src="https://imgur.com/WWtwIjf"
+          src="https://imgur.com/WWtwIjf.png"
           alt="England vs Scotland Stats"
         />
       </div>
