--- a/ukraine.html
+++ b/ukraine.html
@@ -21,7 +21,7 @@
     <title>Ukraine</title>
   </head>
   <body>
-    <header><h1>Ukraine 0 - 4 England </h1></header>
+    <header><h1>Ukraine 0 - 4 England</h1></header>
     <nav>
       <ul>
         <li>
@@ -111,11 +111,11 @@
       </div>
       <div id="div2">
         <img
-          src="https://imgur.com/8GDduYj"
+          src="https://imgur.com/8GDduYj.png"
           alt="England vs Ukraine Starting Line Up"
         />
         <img
-          src="https://imgur.com/cPGJnbv"
+          src="https://imgur.com/cPGJnbv.png"
           alt="England vs Ukraine Stats"
         />
       </div>
