Add radius to flags and change hover effect

--- a/croatia.html
+++ b/croatia.html
@@ -110,7 +110,6 @@
           ></iframe>
         </div>
       </div>
-      <div id="div2">
         <img
           src="https://imgur.com/v14x1Kd.jpeg"
           alt="England vs Croatia Starting Line Up"
@@ -119,18 +118,17 @@
           src="https://imgur.com/DzRO6vO.jpeg"
           alt="England vs Croatia Stats"
         />
-      </div>
     </section>
 
     <footer>
       <div>
-        <a href="https://www.youtube.com/user/fatv" target="blank"
+        <a href="https://www.youtube.com/user/fatv" target="_blank"
           ><i class="fab fa-youtube fa-3x"></i
         ></a>
-        <a href="https://www.github.com/devisis" target="blank"
+        <a href="https://www.github.com/devisis" target="_blank"
           ><i class="fab fa-github fa-3x"></i
         ></a>
-        <a href="https://www.facebook.com/EnglandTeam/" target="blank"
+        <a href="https://www.facebook.com/EnglandTeam/" target="_blank"
           ><i class="fab fa-facebook fa-3x"></i
         ></a>
       </div>
