Update footer links and alter html and css  to fix problems with responsive design

--- a/croatia.html
+++ b/croatia.html
@@ -91,8 +91,10 @@
     </nav>
 
     <section class="opponent">
-      <div id="div1">
-        <p>Wembley Stadium</p><p>13 Jun</p>
+      <div id="opp-intro">
+        <h2>Group Stage</h2>
+        <h3>Wembley Stadium</h3>
+        <h4>13th June 2021</h4>
         <img
           id="flag"
           src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
@@ -110,11 +112,11 @@
           ></iframe>
         </div>
       </div>
-        <img
+        <img id="line-up"
           src="https://imgur.com/v14x1Kd.jpeg"
           alt="England vs Croatia Starting Line Up"
         />
-        <img
+        <img id="stats"
           src="https://imgur.com/DzRO6vO.jpeg"
           alt="England vs Croatia Stats"
         />
