--- a/index.html
+++ b/index.html
@@ -96,10 +96,6 @@
     </nav>
 
     <section class="main">
-      <div id="hero-img"></div>
-      <h2>Timeline of Events</h2>
-      <h3>click the dates to find out more</h3>
-
       <div class="match-selector">
         <div id="cro">
           <a href="croatia.html"
@@ -107,8 +103,9 @@
               src="https://cdn.countryflags.com/thumbs/croatia/flag-400.png"
               alt="Croatian Flag"
             />
-            <p>13th June</p>
-            <p>1 - 0</p></a
+            <h4>13th June</h4>
+            <h4>1 - 0</h4>
+            <h4>Matchday 1</h4></a
           >
         </div>
         <div id="sco">
@@ -117,8 +114,9 @@
               src="https://cdn.countryflags.com/thumbs/scotland/flag-400.png"
               alt="Scottish Flag"
             />
-            <p>18th June</p>
-            <p>0 - 0</p></a
+            <h4>18th June</h4>
+            <h4>0 - 0</h4>
+            <h4>Matchday 2</h4></a
           >
         </div>
         <div id="cze">
@@ -127,8 +125,9 @@
               src="https://cdn.countryflags.com/thumbs/czech-republic/flag-400.png"
               alt="Czech Flag"
             />
-            <p>22nd June</p>
-            <p>1 - 0</p></a
+            <h4>22nd June</h4>
+            <h4>1 - 0</h4>
+            <h4>Matchday 3</h4></a
           >
         </div>
         <div id="ger">
@@ -137,8 +136,9 @@
               src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
               alt="German Flag"
             />
-            <p>29th June</p>
-            <p>2- 0</p></a
+            <h4>29th June</h4>
+            <h4>2- 0</h4>
+            <h4>Round of 16</h4></a
           >
         </div>
         <div id="ukr">
@@ -147,8 +147,9 @@
               src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png"
               alt="Ukrainian Flag"
             />
-            <p>3rd July</p>
-            <p>4 - 0</p></a
+            <h4>3rd July</h4>
+            <h4>4 - 0</h4>
+            <h4>Quarter Final</h4></a
           >
         </div>
         <div id="den">
@@ -157,8 +158,9 @@
               src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png"
               alt="Danish Flag"
             />
-            <p>7th July</p>
-            <p>2 - 1</p></a
+            <h4>7th July</h4>
+            <h4>2 - 1</h4>
+            <h4>Semi Final</h4></a
           >
         </div>
         <div id="ita">
@@ -167,8 +169,9 @@
               src="https://cdn.countryflags.com/thumbs/italy/flag-400.png"
               alt="Italian Flag"
             />
-            <p>11th July</p>
-            <p>1(2) - 1 (3)</p></a
+            <h4>11th July</h4>
+            <h4>1(2) - 1 (3)</h4>
+            <h4>Final</h4></a
           >
         </div>
         <div id="eng">
@@ -177,7 +180,7 @@
               src="https://cdn.countryflags.com/thumbs/england/flag-400.png"
               alt="English Flag"
             />
-            <p>Three Lions</p></a
+            <h4>Three Lions</h4></a
           >
         </div>
       </div>
@@ -189,13 +192,13 @@
 
     <footer>
       <div>
-        <a href="https://www.youtube.com/user/fatv" target="blank"
+        <a href="https://www.youtube.com/user/fatv" target="_blank"
           ><i class="fab fa-youtube fa-3x"></i
         ></a>
-        <a href="https://www.github.com/devisis" target="blank"
+        <a href="https://www.github.com/devisis" target="_blank"
           ><i class="fab fa-github fa-3x"></i
         ></a>
-        <a href="https://www.facebook.com/EnglandTeam/" target="blank"
+        <a href="https://www.facebook.com/EnglandTeam/" target="_blank"
           ><i class="fab fa-facebook fa-3x"></i
         ></a>
       </div>
