--- a/england.html
+++ b/england.html
@@ -326,13 +326,13 @@
 
     <footer>
       <div>
-        <a href="https://www.youtube.com/user/fatv" target="blank"
+        <a href="https://www.youtube.com/user/fatv" target="_blank"
           ><i class="fab fa-youtube fa-3x"></i
         ></a>
-        <a href="https://www.github.com/devisis" target="blank"
+        <a href="https://www.github.com/devisis" target="_blank"
           ><i class="fab fa-github fa-3x"></i
         ></a>
-        <a href="https://www.facebook.com/EnglandTeam/" target="blank"
+        <a href="https://www.facebook.com/EnglandTeam/" target="_blank"
           ><i class="fab fa-facebook fa-3x"></i
         ></a>
       </div>
