--- a/ukraine.html
+++ b/ukraine.html
@@ -91,7 +91,7 @@
     </nav>
 
     <section class="opponent">
-      <div id="div1">
+      <div id="opp-intro">
         <img
           id="flag"
           src="https://cdn.countryflags.com/thumbs/ukraine/flag-400.png"
@@ -109,27 +109,25 @@
           ></iframe>
         </div>
       </div>
-      <div id="div2">
-        <img
+        <img id="line-up"
           src="https://imgur.com/8GDduYj.png"
           alt="England vs Ukraine Starting Line Up"
         />
-        <img
+        <img id="stats"
           src="https://imgur.com/cPGJnbv.png"
           alt="England vs Ukraine Stats"
         />
-      </div>
     </section>
 
     <footer>
       <div>
-        <a href="https://www.youtube.com/user/fatv" target="blank"
+        <a href="https://www.youtube.com/user/fatv" target="_blank"
           ><i class="fab fa-youtube fa-3x"></i
         ></a>
-        <a href="https://www.github.com/devisis" target="blank"
+        <a href="https://www.github.com/devisis" target="_blank"
           ><i class="fab fa-github fa-3x"></i
         ></a>
-        <a href="https://www.facebook.com/EnglandTeam/" target="blank"
+        <a href="https://www.facebook.com/EnglandTeam/" target="_blank"
           ><i class="fab fa-facebook fa-3x"></i
         ></a>
       </div>
