Add deleted hero image to index

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
     </nav>
 
     <section class="main">
+      <div id="hero-img"></div>
+      <h2>Timeline of Events</h2>
+      <h3>click the dates to find out more</h3>
       <div class="match-selector">
         <div id="cro">
           <a href="croatia.html"
