--- a/denmark.html
+++ b/denmark.html
@@ -92,6 +92,9 @@
 
     <section class="opponent">
       <div id="opp-intro">
+        <h2>Semi Final</h2>
+        <h3>Wembley Stadium</h3>
+        <h4>7th July 2021</h4>
         <img
           id="flag"
           src="https://cdn.countryflags.com/thumbs/denmark/flag-400.png"
