--- a/germany.html
+++ b/germany.html
@@ -91,7 +91,10 @@
     </nav>
 
     <section class="opponent">
-      <div id="div1">
+      <div id="opp-intro">
+        <h2>Round of 16</h2>
+        <h3>Wembley Stadium</h3>
+        <h4>29th June 2021</h4>
         <img
           id="flag"
           src="https://cdn.countryflags.com/thumbs/germany/flag-400.png"
@@ -109,16 +112,15 @@
           ></iframe>
         </div>
       </div>
-      <div id="div2">
-        <img
+        <img id="line-up"
           src="https://imgur.com/elh7pZy.png"
           alt="England vs Germany Starting Line Up"
         />
         <img
+        id="stats"
           src="https://imgur.com/vK3qP1d.png"
           alt="England vs Germany Stats"
         />
-      </div>
     </section>
 
     <footer>
