--- a/italy.html
+++ b/italy.html
@@ -92,6 +92,9 @@
 
     <section class="opponent">
       <div id="opp-intro">
+        <h2> Final</h2>
+        <h3>Wembley Stadium</h3>
+        <h4>11th July 2021</h4>
         <img
           id="flag"
           src="https://cdn.countryflags.com/thumbs/italy/flag-400.png"
