--- a/croatia.html
+++ b/croatia.html
@@ -92,7 +92,7 @@
 
     <section class="opponent">
       <div id="opp-intro">
-        <h2>Group Stage</h2>
+        <h2>Matchday - 1</h2>
         <h3>Wembley Stadium</h3>
         <h4>13th June 2021</h4>
         <img
