Add correct highlight links

--- a/germany.html
+++ b/germany.html
@@ -21,7 +21,7 @@
     <title>Germany</title>
   </head>
   <body>
-    <header><h1>Germany 0 - 2 England </h1></header>
+    <header><h1>Germany 0 - 2 England</h1></header>
     <nav>
       <ul>
         <li>
@@ -104,7 +104,7 @@
           <iframe
             width="560"
             height="315"
-            src="https://www.youtube.com/embed/A5QE4nMP10s"
+            src="https://www.youtube.com/embed/RnZBO0YCrYw"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -112,15 +112,16 @@
           ></iframe>
         </div>
       </div>
-        <img id="line-up"
-          src="https://imgur.com/elh7pZy.png"
-          alt="England vs Germany Starting Line Up"
-        />
-        <img
+      <img
+        id="line-up"
+        src="https://imgur.com/elh7pZy.png"
+        alt="England vs Germany Starting Line Up"
+      />
+      <img
         id="stats"
-          src="https://imgur.com/vK3qP1d.png"
-          alt="England vs Germany Stats"
-        />
+        src="https://imgur.com/vK3qP1d.png"
+        alt="England vs Germany Stats"
+      />
     </section>
 
     <footer>
