--- a/czech.html
+++ b/czech.html
@@ -104,7 +104,7 @@
           <iframe
             width="560"
             height="315"
-            src="https://www.youtube.com/embed/A5QE4nMP10s"
+            src="https://www.youtube.com/embed/JTMAWjECLf4"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -112,14 +112,16 @@
           ></iframe>
         </div>
       </div>
-        <img id="line-up"
-          src="https://imgur.com/AdpyZBs.png"
-          alt="England vs Czech-Republic Starting Line Up"
-        />
-        <img id="stats"
-          src="https://imgur.com/xBs0Dmf.png"
-          alt="England vs Czech-Republic Stats"
-        />
+      <img
+        id="line-up"
+        src="https://imgur.com/AdpyZBs.png"
+        alt="England vs Czech-Republic Starting Line Up"
+      />
+      <img
+        id="stats"
+        src="https://imgur.com/xBs0Dmf.png"
+        alt="England vs Czech-Republic Stats"
+      />
     </section>
 
     <footer>
