--- a/italy.html
+++ b/italy.html
@@ -92,7 +92,7 @@
 
     <section class="opponent">
       <div id="opp-intro">
-        <h2> Final</h2>
+        <h2>Final</h2>
         <h3>Wembley Stadium</h3>
         <h4>11th July 2021</h4>
         <img
@@ -104,24 +104,26 @@
           <iframe
             width="560"
             height="315"
-            src="https://www.youtube.com/embed/A5QE4nMP10s"
+            src="https://www.youtube.com/embed/g-kwLolv--w"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
-          ></iframe>
+          >
+          </iframe>
         </div>
       </div>
 
-        <img id="line-up"
-          src="https://imgur.com/HzJiHo9.png"
-          alt="England vs Italy Starting Line Up"
-        />
-        <img id="stats"
-          src="https://imgur.com/GplQDXf.png"
-          alt="England vs Italy Stats"
-        />
-
+      <img
+        id="line-up"
+        src="https://imgur.com/HzJiHo9.png"
+        alt="England vs Italy Starting Line Up"
+      />
+      <img
+        id="stats"
+        src="https://imgur.com/GplQDXf.png"
+        alt="England vs Italy Stats"
+      />
     </section>
 
     <footer>
