Change class name of div on the england page and change width

--- a/england.html
+++ b/england.html
@@ -94,7 +94,7 @@
     </nav>
 
     <section class="england">
-      <div id="div1">
+      <div class="player-media">
         <img
           src="https://imgur.com/BKDQ62o.jpeg"
           alt="England Team Collage"
@@ -124,7 +124,7 @@
         </div>
       </div>
 
-      <div id="div2">
+      <div class="player-stats">
         <table>
           <caption>
             Goalkeepers
